devops-k8s-08/00-app2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-v2
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-v2
  template:
    metadata:
      labels:
        app: web-v2
    spec:
      containers:
      - name: nginx
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        ports:
        - containerPort: 8080
