devops-k8s-08/00-app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-v1
  labels:
    run: web-app-v1
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: web-v1
