devops-k8s-08/00-app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-v2
  labels:
    run: web-app-v2
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: web-v2
