devops-k8s-08/00-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-backend
  labels:
    app: default-backend
spec:
  containers:
  - image: nginx
    name: nginx
    ports: 
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  labels:
    app: default-backend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: default-backend
