devops-k8s-08/01-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba-ingress
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
