devops-k8s-08/03-fanaut-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - host: midominio.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: web-app-v1
            port:
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: web-app-v2
            port:
              number: 8080
